Bug 104061 - FILESAVE: columns saved in different pages after RT
Summary: FILESAVE: columns saved in different pages after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, bisected, filter:docx, filter:rtf, regression
: 104380 (view as bug list)
Depends on:
Blocks: DOCX
  Show dependency treegraph
 
Reported: 2016-11-20 16:27 UTC by Xisco Faulí
Modified: 2017-05-18 17:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2016-11-20 16:27:58 UTC
Steps:
1. Open attachment 48879 [details] 
2. Save it as a new .DOCX file
3. Open the new file

Observed behaviour: each column is saved in a different page after RT

Reproduced in 

Version: 5.3.0.0.alpha1+
Build ID: 757a60d01dd152aadab2ba3c8224252481ce8a88
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; Layout
Engine: new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e
Comment 1 Xisco Faulí 2016-11-20 16:29:54 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2014-07-08 12:41:10 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-07-08 13:35:47 (GMT)
commit c4a5f8c1afd42acb52d0ae9b4d6f42f3e87364d5 (patch)
tree 28ceaeb263904afb7cde9a4ef0a4b0109ac880ec
parent a2b44216f1b1e8d7f4f293e13b257f49ae13de61 (diff)

MSWordExportBase: fix export of header/footer in case of multiple columns
Regression from 263938c4a8789d881f8e736d317b6bcc09c3bce5 (fdo#73596
[DOCX] Multiple Columns in Index, 2014-02-13), header / footer was lost
in multi-column section. This fixes both DOC and DOCX export.

Adding Cc: to Miklos Vajna
Comment 2 Xisco Faulí 2016-12-05 14:49:56 UTC
*** Bug 104380 has been marked as a duplicate of this bug. ***
Comment 3 Xisco Faulí 2016-12-26 23:26:40 UTC
attachment 61255 [details] from bug 49660 is also affected by the same commit.
Comment 4 Justin L 2017-01-05 14:28:32 UTC
Not a simple regression.  Comment 1's regression is basically just a reversion to "the way things were 6 months earlier" - i.e. it is a regression fix.

This document hasn't ever played well since earliest bibisect days.  Related code changes to this bug are timelined here:
> author Oliver Bolte <obo@openoffice.org> 2003-09-01 11:40:35 (GMT)
>commit 1fbd4001994e78040fa94ba06979b36d90dd6846
> INTEGRATION: CWS limerickfilterteam08 (1.51.4); FILE MERGED
-LO3.6: import as 2 column, but a bit messy
-LO4.2: import as 1 column

-LO4.3: regression that comment 1 fixes (still imports as only 1 column)
> author Vinaya Mandke <vinaya.mandke@synerzip.com> 2014-02-13 14:32:53 (GMT)
> commit 263938c4a8789d881f8e736d317b6bcc09c3bce5
> fdo#73596 [DOCX] Multiple Columns in Index

-LO4.3: fixed import as 2 column (and export as 2 column) in commit:
> author Vinaya Mandke <vinaya.mandke@synerzip.com> 2014-04-18 10:20:51 (GMT)
> commit 2e8aad6d45c53d554ccaf26de998ede708cfc289
> fdo#39056 fdo#75431 Section Properties if section starts with table

-LO4.4: exports as 1 column (this bug report)

In my opinion, it just "happened to work" before.

As a starting point, this worked and ran "make check" successfully, but needs a lot more analysis to see whether it is correct or not!!
wrtw8nds.cxx:OutputSectionNode()
-if( !pSet )
+if( !pSet || rNd.IsTableNode() )
Comment 5 Xisco Faulí 2017-01-08 20:37:42 UTC
Hi Justin,
I've checked ba2c31da9723182d2087e27a1ea0f95d9617f343 with 1049 files and I couldn't find any regression introduced by the commit. However, keep in mind other files I haven't used might be affected. Even so, so far so good.
Comment 6 Justin L 2017-01-16 13:25:54 UTC
proposed fix https://gerrit.libreoffice.org/32936
Comment 7 Commit Notification 2017-01-23 04:53:28 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0c3f61fb616ce73d1e651013c455410b987d3e12

tdf#104061 MSWordExportBase: tables shouldn't prevent sectionbreak

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Justin L 2017-01-23 04:57:29 UTC
Hopefully this fix doesn't cause regressions, but it certainly has the potential. Hopefully our "random document" testing will hit full steam during the 5.4 development cycle and catch anything this might break.