tdf#104061 MSWordExportBase: tables shouldn't prevent sectionbreak

This also reverts temporary commit ba2c31da9723182d2087e27a1ea0f95d9617f343
which was done to look for more pro or con proof documents.  None found.

This section of code has been essentially unmodified since the initial
import in 2000, so apparently the necessity for preventing the processing
of a section if the table item contains pageBreak info is no longer valid.

My guess is that tables were excluded to fudge round-tripping better. Recent
use of dummy paragraphs during import fixes many import problems, and thus
export of the section node no longer should be avoided.

Change-Id: I28bcf618f596a1676e2e7820de192ca63bffe68f